fixed the media queries of the login page
-fixed the form messing up when the app is viewed from mobile

-fixed the loading animation being too small on phone

--- a/login.css
+++ b/login.css
@@ -12,7 +12,6 @@
   z-index: 1000;
   display: flex;
   justify-content: center;
-  position: fixed;
   width: 100%;
   transition: ease-in-out 0.3s;
 }
@@ -63,14 +62,6 @@ font-family: 'Press Start 2P', cursive;
 
 }
 
-/* .navbar-links{
-  color: white;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 700;
-  text-align: center;
-  padding: 5px;
-  display: block;
-} */
 
 .navbar-links {
 color: #fff;
@@ -88,11 +79,6 @@ position: relative;
 .navbar-links p{
 padding: 10px;
 }
-/* 
-.navbar-links:hover{
-  color:#7724ff;
-  transition: all 0.2s ease;
-}  */
 
 
 .navbar-links:after {    
@@ -183,6 +169,7 @@ padding: 10px;
 }
 
 #logout-btn{
+  cursor: pointer;
 margin: 0;
 padding: 0;
 }
@@ -229,6 +216,7 @@ html.login, body.login{
   color: white;
 }
 .wrapper .title{
+  padding: 0px 15px;
   width: 50%;
   font-size: 35px;
   font-weight: 600;
@@ -516,9 +504,7 @@ input:-webkit-autofill:active  {
           z-index: 999;
           height: 200px;
           font-size: 12px;
-          /* display: flex;
-          justify-content: center;
-          flex-direction: column; */
+  
       }
 
       .navbar-toggle .bar{
@@ -573,7 +559,10 @@ input:-webkit-autofill:active  {
       
       }
       
-      
+      .animation{
+        width: 95px ; 
+        height: 40px;
+      }
       
       
       @media (max-width: 400px){
